# sirens

./: FEATURES.md  IMPLEMENTATION.md  README.md  pyproject.toml
examples/: cli_demo.py  custom_siren_example.py
src/sirens/: __init__.py  cli.py  core.py
src/sirens/generators/: __init__.py
src/sirens/playback/: __init__.py
src/sirens/presets/: __init__.py
src/sirens/utils/: __init__.py
tests/: test_basic.py
