[project]
name = "sirens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matias Ceau", email = "matias@ceau.net" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
]

[project.scripts]
sirens = "sirens:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
